# SQUIGGS

./: .gitignore  README.md  pyproject.toml
src/squiggs/: __init__.py  neuron_viewer.py  renderers.py
src/squiggs/utils/: paths.py  plotter_utils.py
