[project]
name = "SQUIGGS"
version = "0.1.0"
description = "Sketching Quantifiable Units Interactively; Great Graphing System"
readme = "README.md"
authors = [
    { name = "Stellina Ao", email = "stellina@g.ucla.edu"},
    { name = "Gabriel Rojas Bowe", email = "grojasbowe@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
